--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-concurrency": "^2.3.2",
     "ember-get-config": "^2.1.1",
     "ember-inflector": "^4.0.2",
+    "ember-loading": "^2.0.0",
     "ember-local-storage": "^2.0.2",
     "ember-simple-auth": "^4.2.2",
     "ember-wormhole": "^0.6.0"
