--- a/package.json
+++ b/package.json
@@ -1,96 +1,111 @@
 {
-  "name": "@fleetbase/ember-core",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
-  "keywords": [
-    "ember-addon"
-  ],
-  "repository": "",
-  "license": "MIT",
-  "author": "",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
-  "scripts": {
-    "preinstall": "yarn install --package-lock-only --ignore-scripts && npx force-resolutions",
-    "build": "ember build --environment=production",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
-    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
-    "lint:hbs": "ember-template-lint .",
-    "lint:hbs:fix": "ember-template-lint . --fix",
-    "lint:js": "eslint . --cache",
-    "lint:js:fix": "eslint . --fix",
-    "start": "ember serve",
-    "test": "npm-run-all lint test:*",
-    "test:ember": "ember test",
-    "test:ember-compatibility": "ember try:each"
-  },
-  "dependencies": {
-    "date-fns": "^2.29.2",
-    "ember-auto-import": "^2.4.2",
-    "ember-cli-babel": "^7.26.11",
-    "ember-cli-htmlbars": "^6.1.0",
-    "ember-cli-notifications": "^8.0.0",
-    "ember-concurrency": "^2.3.2",
-    "ember-get-config": "^2.1.1",
-    "ember-inflector": "^4.0.2",
-    "ember-loading": "^2.0.0",
-    "ember-local-storage": "^2.0.2",
-    "ember-simple-auth": "^4.2.2",
-    "ember-wormhole": "^0.6.0"
-  },
-  "devDependencies": {
-    "@ember/optional-features": "^2.0.0",
-    "@ember/test-helpers": "^2.8.1",
-    "@embroider/test-setup": "^1.8.3",
-    "@glimmer/component": "^1.1.2",
-    "@glimmer/tracking": "^1.1.2",
-    "babel-eslint": "^10.1.0",
-    "broccoli-asset-rev": "^3.0.0",
-    "broccoli-persistent-filter": "^3.1.3",
-    "ember-cli": "~4.6.0",
-    "ember-cli-dependency-checker": "^3.3.1",
-    "ember-cli-inject-live-reload": "^2.1.0",
-    "ember-cli-sri": "^2.1.1",
-    "ember-cli-terser": "^4.0.2",
-    "ember-data": "^4.6.1",
-    "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-file-upload": "^7.1.0",
-    "ember-load-initializers": "^2.1.2",
-    "ember-page-title": "^7.0.0",
-    "ember-qunit": "^5.1.5",
-    "ember-resolver": "^8.0.3",
-    "ember-source": "~4.6.0",
-    "ember-source-channel-url": "^3.0.0",
-    "ember-template-lint": "^4.10.1",
-    "ember-try": "^2.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-ember": "^11.0.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-qunit": "^7.3.1",
-    "loader.js": "^4.7.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "qunit": "^2.19.1",
-    "qunit-dom": "^2.0.0",
-    "webpack": "^5.74.0"
-  },
-  "resolutions": {
-    "ember-cli/broccoli-babel-transpiler/broccoli-persistent-filter": "^3.1.3",
-    "ember-cli-babel/broccoli-babel-transpiler/broccoli-persistent-filter": "^3.1.3",
-    "broccoli-babel-transpiler/broccoli-persistent-filter": "^3.1.3",
-    "broccoli-stew/broccoli-persistent-filter": "^3.1.3"
-  },
-  "engines": {
-    "node": "14.* || >= 16"
-  },
-  "ember": {
-    "edition": "octane"
-  },
-  "ember-addon": {
-    "configPath": "tests/dummy/config"
-  }
+    "name": "@fleetbase/ember-core",
+    "version": "0.0.0",
+    "description": "The default blueprint for ember-cli addons.",
+    "keywords": [
+        "ember-addon"
+    ],
+    "repository": "",
+    "license": "MIT",
+    "author": "",
+    "directories": {
+        "doc": "doc",
+        "test": "tests"
+    },
+    "scripts": {
+        "preinstall": "yarn install --package-lock-only --ignore-scripts && npx force-resolutions",
+        "build": "ember build --environment=production",
+        "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
+        "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
+        "lint:hbs": "ember-template-lint .",
+        "lint:hbs:fix": "ember-template-lint . --fix",
+        "lint:js": "eslint . --cache",
+        "lint:js:fix": "eslint . --fix",
+        "start": "ember serve",
+        "test": "npm-run-all lint test:*",
+        "test:ember": "ember test",
+        "test:ember-compatibility": "ember try:each"
+    },
+    "dependencies": {
+        "date-fns": "^2.29.2",
+        "ember-auto-import": "^2.4.2",
+        "ember-cli-babel": "^7.26.11",
+        "ember-cli-htmlbars": "^6.1.0",
+        "ember-cli-notifications": "^8.0.0",
+        "ember-concurrency": "^2.3.2",
+        "ember-get-config": "^2.1.1",
+        "ember-inflector": "^4.0.2",
+        "ember-loading": "^2.0.0",
+        "ember-local-storage": "^2.0.2",
+        "ember-simple-auth": "^4.2.2",
+        "ember-wormhole": "^0.6.0"
+    },
+    "devDependencies": {
+        "@ember/optional-features": "^2.0.0",
+        "@ember/test-helpers": "^2.8.1",
+        "@embroider/test-setup": "^1.8.3",
+        "@glimmer/component": "^1.1.2",
+        "@glimmer/tracking": "^1.1.2",
+        "babel-eslint": "^10.1.0",
+        "broccoli-asset-rev": "^3.0.0",
+        "broccoli-persistent-filter": "^3.1.3",
+        "ember-cli": "~4.6.0",
+        "ember-cli-dependency-checker": "^3.3.1",
+        "ember-cli-inject-live-reload": "^2.1.0",
+        "ember-cli-sri": "^2.1.1",
+        "ember-cli-terser": "^4.0.2",
+        "ember-data": "^4.6.1",
+        "ember-disable-prototype-extensions": "^1.1.3",
+        "ember-file-upload": "^7.1.0",
+        "ember-load-initializers": "^2.1.2",
+        "ember-page-title": "^7.0.0",
+        "ember-qunit": "^5.1.5",
+        "ember-resolver": "^8.0.3",
+        "ember-source": "~4.6.0",
+        "ember-source-channel-url": "^3.0.0",
+        "ember-template-lint": "^4.10.1",
+        "ember-try": "^2.0.0",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-ember": "^11.0.2",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-qunit": "^7.3.1",
+        "loader.js": "^4.7.0",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.7.1",
+        "qunit": "^2.19.1",
+        "qunit-dom": "^2.0.0",
+        "webpack": "^5.74.0"
+    },
+    "resolutions": {
+        "ember-cli/broccoli-babel-transpiler/broccoli-persistent-filter": "^3.1.3",
+        "ember-cli-babel/broccoli-babel-transpiler/broccoli-persistent-filter": "^3.1.3",
+        "broccoli-babel-transpiler/broccoli-persistent-filter": "^3.1.3",
+        "broccoli-stew/broccoli-persistent-filter": "^3.1.3"
+    },
+    "engines": {
+        "node": "14.* || >= 16"
+    },
+    "ember": {
+        "edition": "octane"
+    },
+    "ember-addon": {
+        "configPath": "tests/dummy/config"
+    },
+    "prettier": {
+        "trailingComma": "es5",
+        "tabWidth": 4,
+        "semi": true,
+        "singleQuote": true,
+        "printWidth": 190,
+        "overrides": [
+            {
+                "files": "*.hbs",
+                "options": {
+                    "singleQuote": false
+                }
+            }
+        ]
+    }
 }
