--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "ember-cli-notifications": "^8.0.0",
         "ember-concurrency": "^2.3.2",
         "ember-concurrency-decorators": "^2.0.3",
+        "ember-decorators": "^6.1.1",
         "ember-get-config": "^2.1.1",
         "ember-inflector": "^4.0.2",
         "ember-loading": "^2.0.0",
