--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "test": "tests"
     },
     "scripts": {
-        "preinstall": "yarn install --package-lock-only --ignore-scripts && npx force-resolutions",
         "build": "ember build --environment=production",
         "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
         "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
@@ -38,7 +37,7 @@
         "ember-get-config": "^2.1.1",
         "ember-inflector": "^4.0.2",
         "ember-loading": "^2.0.0",
-        "ember-local-storage": "^2.0.2",
+        "ember-local-storage": "^2.0.4",
         "ember-simple-auth": "^4.2.2",
         "ember-wormhole": "^0.6.0"
     },
@@ -81,11 +80,8 @@
         "qunit-dom": "^2.0.0",
         "webpack": "^5.74.0"
     },
-    "resolutions": {
-        "ember-cli/broccoli-babel-transpiler/broccoli-persistent-filter": "^3.1.3",
-        "ember-cli-babel/broccoli-babel-transpiler/broccoli-persistent-filter": "^3.1.3",
-        "broccoli-babel-transpiler/broccoli-persistent-filter": "^3.1.3",
-        "broccoli-stew/broccoli-persistent-filter": "^3.1.3"
+    "overrides": {
+        "broccoli-persistent-filter": "^3.1.3"
     },
     "engines": {
         "node": "14.* || >= 16"
