update workflow for publish to use auth token

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,4 +60,4 @@ jobs:
       run: pnpm run build
 
     - name: Publish
-      run: pnpm publish --access public
+      run: pnpm publish --access public --auth ${secrets.NPM_AUTH_TOKEN}
