--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches: [ main ]
     tags:
-      - 'refs/tags/*' # Listen for tag events
+      - 'v*'
   pull_request:
     branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -60,5 +61,8 @@ jobs:
     - name: Build
       run: pnpm run build
 
+    - name: Set up npm
+      run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_AUTH_TOKEN }}" > ~/.npmrc
+
     - name: Publish
-      run: pnpm publish --access public --auth ${secrets.NPM_AUTH_TOKEN}
+      run: npm publish --access public
