--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
         "prettier": "^2.7.1",
         "qunit": "^2.19.1",
         "qunit-dom": "^2.0.0",
+        "resolve": "^1.22.2",
         "webpack": "^5.74.0"
     },
     "overrides": {
