--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@fleetbase/ember-core",
-    "version": "0.0.7",
+    "version": "0.0.8",
     "description": "Provides all the core services, decorators and utilities for building a Fleetbase extension for the Console.",
     "keywords": [
         "fleetbase-extension",
@@ -58,6 +58,8 @@
         "@glimmer/tracking": "^1.1.2",
         "babel-eslint": "^10.1.0",
         "broccoli-asset-rev": "^3.0.0",
+        "broccoli-funnel": "^3.0.8",
+        "broccoli-merge-trees": "^4.2.0",
         "broccoli-persistent-filter": "^3.1.3",
         "ember-cli": "~4.6.0",
         "ember-cli-dependency-checker": "^3.3.1",
