--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
     "version": "0.0.8",
     "description": "Provides all the core services, decorators and utilities for building a Fleetbase extension for the Console.",
     "keywords": [
-        "fleetbase-extension",
         "fleetbase-core",
         "fleetbase-services",
         "fleetbase",
-        "ember-addon",
-        "ember-engine"
+        "ember-addon"
     ],
     "repository": "https://github.com/fleetbase/ember-core",
     "license": "MIT",
