--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     },
     "dependencies": {
         "date-fns": "^2.30.0",
+        "ember-intl": "^6.0.0-beta.6",
         "ember-auto-import": "^2.4.2",
         "ember-cli-babel": "^7.26.11",
         "ember-cli-htmlbars": "^6.1.0",
