--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@fleetbase/ember-core",
-    "version": "0.1.8",
+    "version": "0.1.9",
     "description": "Provides all the core services, decorators and utilities for building a Fleetbase extension for the Console.",
     "keywords": [
         "fleetbase-core",
@@ -33,7 +33,7 @@
     },
     "dependencies": {
         "date-fns": "^2.30.0",
-        "ember-intl": "^6.0.0-beta.6",
+        "ember-intl": "6.3.2",
         "ember-auto-import": "^2.4.2",
         "ember-cli-babel": "^7.26.11",
         "ember-cli-htmlbars": "^6.1.0",
@@ -68,7 +68,7 @@
         "ember-cli-sri": "^2.1.1",
         "ember-cli-terser": "^4.0.2",
         "ember-disable-prototype-extensions": "^1.1.3",
-        "ember-file-upload": "^7.1.0",
+        "ember-file-upload": "8.4.0",
         "ember-load-initializers": "^2.1.2",
         "ember-page-title": "^7.0.0",
         "ember-qunit": "^5.1.5",
