--- a/package.json
+++ b/package.json
@@ -55,8 +55,6 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-proposal-decorators": "^7.23.2",
-    "@ember-data/serializer": "^5.3.0",
-    "@ember-data/store": "^5.3.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/test-helpers": "^3.2.0",
     "@embroider/test-setup": "^3.0.2",
@@ -79,6 +77,7 @@
     "ember-qunit": "^8.0.1",
     "ember-resolver": "^11.0.1",
     "ember-source": "~5.4.0",
+    "ember-data": "^4.12.5",
     "ember-source-channel-url": "^3.0.0",
     "ember-template-lint": "^5.11.2",
     "ember-try": "^3.0.0",
